[gd_scene load_steps=2 format=2]

[ext_resource path="res://Enemy/WanderController.gd" type="Script" id=1]

[node name="WanderController" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_wander_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_wait_to_wander_timer_timeout"]
